<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginRight="25dp"
    android:layout_marginLeft="25dp"
    >

    <!-- for picture -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >

    </LinearLayout>

    <!-- for description -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/stepsInputDesc1"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        />

    <!-- for options -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventType"
        android:textSize="15sp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/stepsEventType"
        android:weightSum="5"
        >

        <RadioButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/eventTypeTravel"
            android:textAlignment="center"
            android:background="@drawable/square_outline"
            android:drawableTop="@drawable/type_travel"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
        <RadioButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/eventTypeCelebration"
            android:textAlignment="center"
            android:background="@drawable/square_outline"
            android:drawableTop="@drawable/type_celebration"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
        <RadioButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/eventTypeWork"
            android:textAlignment="center"
            android:background="@drawable/square_outline"
            android:drawableTop="@drawable/type_work"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
        <RadioButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/eventTypeOuting"
            android:textAlignment="center"
            android:background="@drawable/square_outline"
            android:drawableTop="@drawable/type_outing"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:hint="Or enter other type here"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stepsYourTitle"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/stepsEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:maxLines="1"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="-10dp"
        >

    <Button
        android:id="@+id/stepsNext1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/simple_circle"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/stepsNextArrow"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"
        />
    </RelativeLayout>

</LinearLayout>