<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            >
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventInfoHeader"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:background="@color/colorCyan"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventTitle"
                android:textSize="15sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/customEventTitle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventType"
                android:textSize="15sp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/customEventType"
                android:weightSum="5"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/eventTypeTravel"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/type_travel"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/eventTypeCelebration"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/type_celebration"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/eventTypeWork"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/type_work"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/eventTypeOuting"
                    android:textAlignment="center"
                    android:drawableTop="@drawable/type_outing"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/type_more"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventPicture"
                android:textSize="15sp"
                />
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:id="@+id/customEventPicture"
                android:text="Upload"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventColor"
                android:textSize="15sp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/customEventColor"
                android:weightSum="5"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/simple_circle"
                    android:drawableTint="@color/colorAccent"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/simple_circle"
                    android:drawableTint="@color/colorCyan"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/simple_circle"
                    android:drawableTint="@color/colorAccent"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/simple_circle"
                    android:drawableTint="@color/colorCyan"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/simple_circle"
                    android:drawableTint="@color/colorAccent"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateTimeHeader"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:background="@color/colorCyan"
            />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateTimeDay"
                android:textSize="15sp"
                />
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customDateTimeDate"
                android:layout_centerInParent="true"
                >
            </DatePicker>

            </RelativeLayout>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateTimeClock"
                android:textSize="15sp"
                />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customDateTimeClock"
                android:layout_weight="2"
                />

            <Spinner
                android:id="@+id/customDateTimeAmPm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                ></Spinner>
                <!-- android:prompt="@array/time_array" -->

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/involvementHeader"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:background="@color/colorCyan"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/involvementImportance"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/customInvolvementImportance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/involvementRole"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/customInvolvementRole"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prepTimeHeader"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:background="@color/colorCyan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prepTimeAdvanced"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/customPrepTimeAdvancedTime"
                    android:layout_weight="2"
                    />

                <Spinner
                    android:id="@+id/customPrepTimeAdvancedUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    ></Spinner>
                <!-- android:prompt="@array/time_unit_array" -->

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prepTimeLong"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/customPrepTimeLongTime"
                    android:layout_weight="2"
                    />

                <Spinner
                    android:id="@+id/customPrepTimeTimeUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    ></Spinner>
                <!-- android:prompt="@array/time_unit_array" -->

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminderHeader"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:background="@color/colorCyan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminderNeed"
                android:textSize="15sp" />

            <!-- for choosing important things needed
                 list current items and option to add more? -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/importantNeededList"
                android:background="@color/colorAccent"
                android:text="\n\n\n\n"
                android:textSize="15sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                >
           <ToggleButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textOff="test"
               android:textOn="test"
               android:layout_weight="1"
               />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="test"
                android:textOn="test"
                android:layout_weight="1"
                />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="test"
                android:textOn="test"
                android:layout_weight="1"
                />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="test"
                android:textOn="test"
                android:layout_weight="1"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/importantNeededInput"
                    android:layout_weight="4"
                    />

                <ImageButton
                    android:id="@+id/importantNeededAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/add_item"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminderLastMin"
                android:textSize="15sp"
                />

            <!-- for choosing last minute reminders, use checklist -->

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reminderLastMinOption1"
                android:text="Option 1"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reminderLastMinOption2"
                android:text="Option 2"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reminderLastMinOption3"
                android:text="Option 3"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notesHeader"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:background="@color/colorCyan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/notesInfo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                />
        </LinearLayout>

        <!-- for adding extra headers then linearlayouts for each section -->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmLabel"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"

            />
    </LinearLayout>
</ScrollView>

    <!-- must make an outer parent layout for the side navigation buttons-->